08-kyverno/policies/bad-image-pull.yaml
apiVersion: v1
kind: Pod

metadata:
  name: bad-image-pull
  namespace: apim

spec:
  containers:
  - name: nginx
    image: docker.io/nginx:1.29
    imagePullPolicy: Never
