08-kyverno/policies/bad-label.yaml
apiVersion: v1
kind: Pod

metadata:
  name: bad-label
  namespace: apim

spec:

  containers:
  - name: nginx
    image: docker.io/library/nginx:1.29
