08-kyverno/policies/bad-probe.yaml
apiVersion: v1
kind: Pod

metadata:
  name: bad-probe
  namespace: apim

spec:
  containers:
  - name: nginx
    image: nginx:1.29
