08-kyverno/policies/bad-resources.yaml
apiVersion: v1
kind: Pod

metadata:
  name: bad-resources
  namespace: apim

spec:
  containers:
  - name: nginx
    image: nginx:1.29
