08-kyverno/policies/bad-wso2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-wso2
  namespace: apim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-wso2
  template:
    metadata:
      labels:
        app: bad-wso2
    spec:
      containers:
        - name: bad-wso2
          image: nginx:latest
