08-kyverno/policies/good-probe.yaml
apiVersion: v1
kind: Pod

metadata:
  name: good-probe
  namespace: apim

  labels:
    app: nginx-test
    environment: dev

spec:

  securityContext:
    runAsNonRoot: true

  containers:

  - name: nginx

    image: docker.io/nginxinc/nginx-unprivileged:1.29
    ports:
    - containerPort: 8080

    securityContext:
      privileged: false

    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"

      limits:
        cpu: "500m"
        memory: "512Mi"

    livenessProbe:
      httpGet:
        path: /
        port: 8080

    readinessProbe:
      httpGet:
        path: /
        port: 8080
