08-kyverno/policies/good-registry.yaml
apiVersion: v1
kind: Pod

metadata:
  name: good-registry
  namespace: apim

spec:

  containers:
  - name: nginx
    image: docker.io/library/nginx:1.29
