08-kyverno/policies/good-resources.yaml
apiVersion: v1
kind: Pod

metadata:
  name: good-resources
  namespace: apim

spec:
  containers:
  - name: nginx
    image: nginx:1.29

    resources:
      requests:
        cpu: "500m"
        memory: "512Mi"

      limits:
        cpu: "1"
        memory: "1Gi"
