08-kyverno/policies/good-root.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-root
  namespace: apim

spec:
  securityContext:
    runAsNonRoot: true

  containers:
    - name: nginx
      image: nginx:1.29
