08-kyverno/policies/good-wso2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-wso2
  namespace: apim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-wso2
  template:
    metadata:
      labels:
        app: good-wso2
    spec:
      containers:
        - name: good-wso2
          image: nginx:latest
