08-kyverno/policies/allowed-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: allowed-image-registries

spec:
  validationFailureAction: Enforce
  background: true

  rules:

  - name: check-image-registry

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:
      message: "Les images doivent provenir d'un registry autorisé."

      pattern:
        spec:
          containers:
          - image: "docker.io/* | ghcr.io/* | registry.k8s.io/*"
