08-kyverno/policies/disallow-hostpath.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-hostpath

spec:

  validationFailureAction: Enforce

  rules:

  - name: block-hostpath

    match:
      resources:
        kinds:
        - Pod

    validate:

      message:
        hostPath forbidden

      pattern:

        spec:

          =(volumes):

          - X(hostPath): "null"
