08-kyverno/policies/require-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: validate-run-as-non-root

      match:
        any:
        - resources:
            kinds:
            - Pod

      validate:
        message: "Containers must run as non-root."

        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
